Fixed api.yml to generate CommentApiController Added getCurrentUser by token
